--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -1,8 +1,9 @@
 {
-  "game_created": "Игра создана",
-  "create_error": "Вы уже создали одну игру, сначала отмените её или дождитесь автоотмены!",
+  "game_error_incorrectGameID": "Игра не найдена! Возможно, она была отменена или закончена.",
+  "game_create_error": "Вы уже создали одну игру, сначала отмените её или дождитесь автоотмены!",
+  "game_created_title": "Игра создана",
   "game_created_autocancel": "Автоотмена",
-  "game_created_gameOwner": "Владелец игры",
+  "game_created_gameHost": "Организатор игры",
   "game_created_playerList": "Список игроков",
   "game_created_roles": "Роли:",
   "game_created_gameEndConditions": "Условия окончания игры:",
@@ -12,20 +13,22 @@
   "game_created_button_leave": "ㅤㅤПокинутьㅤㅤ",
   "game_created_button_edit": "ㅤИзменитьㅤ",
   "game_created_button_new": "Создать новую игру",
-  "cancel_content_message": "Игра была отменена организатором!",
-  "cancel_confirm_message": "Игра была убрана!",
-  "auto_cancel_content_message": "Игра была автоматически отменена!",
-  "error_you_are_not_the_owner": "Вы не владелец игры!",
-  "error_incorrect_game_id": "Неправильный ID игры!",
-  "game_was_ended": "Игра была завершена организатором!",
-  "game_deleted": "Игра удалена!",
+  "game_cancel_error_noAccess": "Извините, вы не можете отменить эту игру, потому что не являетесь её организатором!",
+  "game_cancel_success_message_aboveEmbed": "Игра отменена организатором. Но вы можете создать другую!",
+  "game_cancel_success_message": "Игра отменена.",
+  "game_autocancel_message": "Игра автоматически отменена. Но вы можете создать другую!",
+  "game_start_error_noAccess": "Извините, вы не можете начать эту игру, потому что не являетесь её организатором!",
+  "game_start_error_notEnoughPlayers": "Недостаточно игроков для начала игры!",
+  "game_start_error_notEnoughRoles": "Недостаточно ролей для начала игры!",
+  "game_started_button_endGame": "Закончить игру",
+  "game_started_title": "Игра начата",
+  "game_end_error_noAccess": "Извините, вы не можете закончить эту игру, потому что не являетесь её организатором!",
+  "game_end_success_message": "Игра закончена.",
+  "game_end_success_privateMessage": "Игра закончена организатором. Но вы можете создать другую!",
   "error_you_are_already": "Вы уже в игре!",
   "join_game": "Вы успешно подключились!",
   "error_you_are_not_already": "Вас итак там нет!",
   "leave_game": "Вы покинули игру!",
-  "error_not_enough_players": "Недостаточно игроков для начала игры!",
-  "pre_end_game": "Закончить игру",
-  "game_started": "Игра была запущена!",
   "innocent": "мирный",
   "mafia": "мафия",
   "doctor": "доктор",
@@ -49,7 +52,7 @@
 
 
   "wake_up_title": "Город просыпается!",
-  "wake_up_description": "С добрым утром! Или не очень добрым... Время выбирать подозреваемого ⚖",
+  "wake_up_description": "С добрым утром! Или не очень добрым... Время выбирать подозреваемого :scales:",
   "sleep_time_title": "Город засыпает...",
   "sleep_time_description": "Надеемся, все доживут до утра!",
   "kills_title": "Утреннее солнце осветило следы ужасных злодеяний",
@@ -61,31 +64,31 @@
   "vote_select": "Выберите, против кого хотите проголосовать...",
   "role_mafia_name": "Мафия",
   "role_mafia_placeHolder": "Выберите жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ!\n:skull_crossbones: Каждую ночь мафия убивает одного игрока, за которого её члены отдают наибольшее число голосов (в случае равенства игрок выбирается случайным образом). Но помните: жертву может вылечить доктор.\n:trophy: Мафия побеждает, если составляет не менее половины всех активных игроков.% + ({r:maniac:count} > 0 ? % Исключение: если осталось двое игроков — представитель мафии и маньяк — побеждает маньяк..% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette: С вами в команде: % + %{oPlayersTRole}% : %%)",
+  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ!\n:skull_crossbones:  Каждую ночь мафия убивает одного игрока, за которого её члены отдают наибольшее число голосов (в случае равенства игрок выбирается случайным образом). Но помните: жертву может вылечить доктор.\n:trophy:  Мафия побеждает, если составляет не менее половины всех активных игроков.% + ({r:maniac:count} > 0 ? % Исключение: если осталось двое игроков — представитель мафии и маньяк — побеждает маньяк..% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  С вами в команде: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Маньяк",
   "role_killer_placeHolder": "Выберите жертву...",
-  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ!\n:axe: Раз в две ночи вы убиваете любого игрока, которого захотите. Но помните: жертву может вылечить доктор.\n:trophy: Вы побеждаете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%",
+  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ!\n:axe:  Раз в две ночи вы убиваете любого игрока, которого захотите. Но помните: жертву может вылечить доктор.\n:trophy:  Вы побеждаете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%",
   "role_peaceful_name": "Мирный",
-  "role_peaceful_description": "%Ваша цель — защитить город от преступников!\n:scales: Раскройте личности злодеев и добейтесь их изгнания из города.\n:trophy: Мирные побеждают, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_peaceful_description": "%Ваша цель — защитить город от преступников!\n:scales:  Раскройте личности злодеев и добейтесь их изгнания из города.\n:trophy:  Мирные побеждают, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
   "role_doctor_name": "Доктор",
   "role_doctor_placeHolder": "Выберите, кого хотите вылечить...",
-  "role_doctor_description": "%Вы спасаете жизни людей! :heart:\n:pill: Каждую ночь вы лечите одного игрока. Если этого игрока выбрали преступники, он не пострадает.\n:trophy: Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_doctor_description": "%Вы спасаете жизни людей! :heart:\n:pill:  Каждую ночь вы лечите одного игрока. Если этого игрока выбрали преступники, он не пострадает.\n:trophy:  Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
   "role_police_name": "Детектив",
   "role_police_placeHolder": "Выберите, кого хотите проверить...",
-  "role_police_description": "%Вы расследуете преступления в городе! :oncoming_police_car:\n:mag_right: Каждую ночь вы проверяете одного игрока и выясняете, принадлежит ли он к мафии.\n:trophy: Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_police_description": "%Вы расследуете преступления в городе! :oncoming_police_car:\n:mag_right:  Каждую ночь вы проверяете одного игрока и выясняете, принадлежит ли он к мафии.\n:trophy:  Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
   "role_mistress_name": "Ночная бабочка",
   "role_mistress_placeHolder": "Выберите, к кому хотите наведаться...",
-  "role_mistress_description": "%Вы несёте любовь в этот мир! А что есть любовь — кто знает... :kiss:\n:strawberry: Каждую ночь вы наведываетесь к одному из игроков. На следующий день этот игрок не может быть изгнан голосованием.\n:trophy: Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_mistress_description": "%Вы несёте любовь в этот мир! А что есть любовь — кто знает... :kiss:\n:strawberry:  Каждую ночь вы наведываетесь к одному из игроков. На следующий день этот игрок не может быть изгнан голосованием.\n:trophy:  Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
 
   "condition_mafiaWin_name": "Условие победы мафии",
   "condition_mafiaWin_WinEmbedTitle": "Мафия победила!",
-  "condition_mafiaWin_WinEmbedDescription": "Мафия захватила город — закон повержен.",
+  "condition_mafiaWin_WinEmbedDescription": "%Мафия захватила город — закон повержен.\nЧлены мафии: {sr:mafia:string}.%",
   "condition_killerWin_name": "Условие победы маньяка",
   "condition_killerWin_WinEmbedTitle": "Маньяк победил!",
-  "condition_killerWin_WinEmbedDescription": "Маньяк победил — весь город вырезан.",
+  "condition_killerWin_WinEmbedDescription": "%Маньяк {sr:killer:string} победил — весь город вырезан.%",
   "condition_peacefulWin_name": "Условие победы мирных",
   "condition_peacefulWin_WinEmbedTitle": "Мирные победили!",
-  "condition_peacefulWin_WinEmbedDescription": "Мирные победили — преступников в городе не осталось.",
+  "condition_peacefulWin_WinEmbedDescription": "%Мирные победили — преступников в городе не осталось.\nУбийцами были: {sr:killer:string}.%",
 
   "role_embed_action_name": "Действие",
   "role_embed_groupDec_name": "Играет в группе?",
@@ -111,20 +114,49 @@
   "profile_button_custom": "Кастомизация",
   "profile_button_news": "Уведомления о новостях",
 
-  "create_condition_error_premium": "Извините, у вас нет Premium, чтобы создавать собственные роли и условия!",
-  "create_condition_error_number": "Извините, вы не можете создать больше 21 условия!",
-  "create_condition_title1": "Создание условия",
-  "create_condition_conditionName_label": "Название",
-  "create_condition_conditionName_placeHolder": "Моё условие победы мафии",
-  "create_condition_title2": "Создание условия: ",
-  "create_condition_condition_label": "Условие",
-  "create_condition_condition_placeHolder": "ваше условие; дополнительная информация в _/help -> Scripting_",
-  "create_condition_embedTitle_label": "Заголовок",
-  "create_condition_embedTitle_placeHolder": "Побеждает мафия ;)",
-  "create_condition_embedDescription_label": "Описание",
-  "create_condition_embedDescription_placeHolder": "Загадочным образом мафия победила...",
-  "create_condition_embedThumbnail_label": "Миниатюра",
-  "create_condition_embedThumbnail_placeHolder": "ссылка на изображение с умопомрачительным котёнком",
-  "create_condition_winRole_label": "Роль, которая побеждает",
-  "create_condition_winRole_placeHolder": "просто название роли, которая побеждает"
+  "condition_create_error_number": "Извините, вы не можете создать больше 21 условия!",
+  "condition_create_title1": "Создание условия",
+  "condition_create_conditionName_label": "Название",
+  "condition_create_conditionName_placeHolder": "Моё условие победы мафии",
+  "condition_create_goNext_button": "Перейти далее",
+  "condition_create_goNext_message": "Нажмите кнопку, чтобы продолжить:",
+  "condition_create_title2": "Создание условия: ",
+  "condition_create_condition_label": "Условие",
+  "condition_create_condition_placeHolder": "ваше условие; дополнительная информация в _/help -> Scripting_",
+  "condition_create_embedTitle_label": "Заголовок",
+  "condition_create_embedTitle_placeHolder": "Побеждает мафия ;)",
+  "condition_create_embedDescription_label": "Описание",
+  "condition_create_embedDescription_placeHolder": "%Загадочным образом мафия победила...%",
+  "condition_create_embedThumbnail_label": "Миниатюра",
+  "condition_create_embedThumbnail_placeHolder": "ссылка на изображение с умопомрачительным котёнком",
+  "condition_create_winRole_label": "Роль, которая побеждает",
+  "condition_create_winRole_placeHolder": "просто название роли, которая побеждает",
+  "condition_create_success_message": "Условие успешно создано:",
+
+  "condition_view_error_notFound": "Условие не найдено!",
+  "condition_view_error_noAccess": "Извините, вы не можете просматривать это условие!",
+
+  "condition_edit_choose_placeHolder": "Выберите условие для изменения...",
+  "condition_edit_error_notFound": "Условие не найдено!",
+  "condition_edit_error_noAccess": "Извините, вы не можете изменять это условие!",
+  "condition_edit_title": "Изменение условия: ",
+  "condition_edit_condition_label": "Условие",
+  "condition_edit_condition_placeHolder": "ваше новое условие; дополнительная информация в _/help -> Scripting_",
+  "condition_edit_embedTitle_label": "Заголовок",
+  "condition_edit_embedTitle_placeHolder": "ваш новый заголовок",
+  "condition_edit_embedDescription_label": "Описание",
+  "condition_edit_embedDescription_placeHolder": "ваше новое описание, не забудьте про %",
+  "condition_edit_embedThumbnail_label": "Миниатюра",
+  "condition_edit_embedThumbnail_placeHolder": "ссылка на ваше новое изображение",
+  "condition_edit_winRole_label": "Роль, которая побеждает",
+  "condition_edit_winRole_placeHolder": "название вашей новой роли, которая побеждает",
+  "condition_edit_success_message": "Условие успешно изменено:",
+
+  "condition_delete_choose_placeHolder": "Выберите условие для удаления...",
+  "condition_delete_error_notFound": "Условие не найдено!",
+  "condition_delete_error_noAccess": "Извините, вы не можете удалить это условие!",
+  "condition_delete_success_message": "Условие успешно удалено.",
+
+  "error_premium": "Извините, у вас нет Premium, чтобы создавать собственные роли и условия!",
+  "failure_message": "Произошла ошибка, пожалуйста, обратитесь в службу поддержки!"
 }
