--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -1,31 +1,34 @@
 {
-  "game_created": "Гру створено",
-  "create_error": "Ви вже створили одну гру, спочатку скасуйте її або дочекайтесь автоскасування!",
+  "game_error_incorrectGameID": "Гру не знайдено! Можливо, її було скасовано чи закінчено.",
+  "game_create_error": "Ви вже створили одну гру, спочатку скасуйте її або дочекайтесь автоскасування!",
+  "game_created_title": "Гру створено",
   "game_created_autocancel": "Автоскасування",
-  "game_created_gameOwner": "Власник гри",
+  "game_created_gameHost": "Організатор гри",
   "game_created_playerList": "Список гравців",
   "game_created_roles": "Ролі:",
   "game_created_gameEndConditions": "Умови завершення гри:",
   "game_created_button_join": "ㅤПриєднатися",
-  "game_created_button_start": "ㅤㅤПочатиㅤㅤ",
+  "game_created_button_start": "ㅤРозпочатиㅤ",
   "game_created_button_cancel": "ㅤСкасуватиㅤ",
   "game_created_button_leave": "ㅤㅤЗалишитиㅤ",
   "game_created_button_edit": "ㅤЗмінитиㅤ",
   "game_created_button_new": "Створити нову гру",
-  "cancel_content_message": "Гру скасовано організатором!",
-  "cancel_confirm_message": "Гру скасовано!",
-  "auto_cancel_content_message": "Гру було автоматично скасовано!",
-  "error_you_are_not_the_owner": "Ви не власник гри!",
-  "error_incorrect_game_id": "Неправильний ID гри!",
-  "game_was_ended": "Гру завершено організатором!",
-  "game_deleted": "Гру видалено!",
+  "game_cancel_error_noAccess": "Вибачте, ви не можете скасувати цю гру, бо не є її організатором!",
+  "game_cancel_success_message_aboveEmbed": "Гру скасовано організатором. Але ви можете створити іншу!",
+  "game_cancel_success_message": "Гру скасовано.",
+  "game_autocancel_message": "Гру автоматично скасовано. Але ви можете створити іншу!",
+  "game_start_error_noAccess": "Вибачте, ви не можете розпочати цю гру, бо не є її організатором!",
+  "game_start_error_notEnoughPlayers": "Недостатньо гравців для початку гри!",
+  "game_start_error_notEnoughRoles": "Недостатньо ролей для початку гри!",
+  "game_started_button_endGame": "Закінчити гру",
+  "game_started_title": "Гру почато",
+  "game_end_error_noAccess": "Вибачте, ви не можете закінчити цю гру, бо не є її організатором!",
+  "game_end_success_message": "Гру закінчено.",
+  "game_end_success_privateMessage": "Гру закінчено організатором. Але ви можете створити іншу!",
   "error_you_are_already": "Ви вже в грі!",
   "join_game": "Ви успішно приєдналися!",
   "error_you_are_not_already": "Ви вже не в грі!",
   "leave_game": "Ви залишили гру!",
-  "error_not_enough_players": "Недостатньо гравців для початку гри!",
-  "pre_end_game": "Завершити гру",
-  "game_started": "Гру почато!",
   "innocent": "мирний",
   "mafia": "мафія",
   "doctor": "лікар",
@@ -49,7 +52,7 @@
 
 
   "wake_up_title": "Місто прокидається!",
-  "wake_up_description": "Доброго ранку! А ранок точно добрий?.. Час обирати підозрюваного ⚖",
+  "wake_up_description": "Доброго ранку! А ранок точно добрий?.. Час обирати підозрюваного :scales:",
   "sleep_time_title": "Місто засинає...",
   "sleep_time_description": "Сподіваємося, усі доживуть до ранку!",
   "kills_title": "Вранішнє сонце висвітлило сліди жахливих злодіянь",
@@ -61,31 +64,31 @@
   "vote_select": "Оберіть, проти кого хочете проголосувати...",
   "role_mafia_name": "Мафія",
   "role_mafia_placeHolder": "Оберіть жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ!\n:skull_crossbones: Щоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\n:trophy: Мафія перемагає, якщо складає не менше половини всіх активних гравців.% + ({r:maniac:count} > 0 ? % Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette: З вами в команді: % + %{oPlayersTRole}% : %%)",
+  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ!\n:skull_crossbones:  Щоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\n:trophy:  Мафія перемагає, якщо складає не менше половини всіх активних гравців.% + ({r:maniac:count} > 0 ? % Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  З вами в команді: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Маніяк",
   "role_killer_placeHolder": "Оберіть жертву...",
-  "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ!\n:axe: Раз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\n:trophy: Ви перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
+  "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ!\n:axe:  Раз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\n:trophy:  Ви перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
   "role_peaceful_name": "Мирний",
-  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців!\n:scales: Розкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\n:trophy: Мирні перемагають, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців!\n:scales:  Розкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\n:trophy:  Мирні перемагають, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_doctor_name": "Доктор",
   "role_doctor_placeHolder": "Оберіть, кого хочете вилікувати...",
-  "role_doctor_description": "%Ви рятуєте життя людей! :heart:\n:pill: Щоночі ви лікуєте одного гравця. Якщо цього гравця обрали злочинці, він не постраждає.\n:trophy: Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_doctor_description": "%Ви рятуєте життя людей! :heart:\n:pill:  Щоночі ви лікуєте одного гравця. Якщо цього гравця обрали злочинці, він не постраждає.\n:trophy:  Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_police_name": "Детектив",
   "role_police_placeHolder": "Оберіть, кого хочете перевірити...",
-  "role_police_description": "%Ви розслідуєте злочини в місті! :oncoming_police_car:\n:mag_right: Щоночі ви перевіряєте одного гравця та з'ясовуєте, чи належить він до мафії.\n:trophy: Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_police_description": "%Ви розслідуєте злочини в місті! :oncoming_police_car:\n:mag_right:  Щоночі ви перевіряєте одного гравця та з'ясовуєте, чи належить він до мафії.\n:trophy:  Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_mistress_name": "Повія",
   "role_mistress_placeHolder": "Оберіть, до кого хочете навідатися...",
-  "role_mistress_description": "%Ви несете любов у цей світ! А що є любов - хто знає... :kiss:\n:strawberry: Щоночі ви навідуєтеся до одного з гравців. Наступного дня цей гравець не може бути вигнаний голосуванням.\n:trophy: Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_mistress_description": "%Ви несете любов у цей світ! А що є любов - хто знає... :kiss:\n:strawberry:  Щоночі ви навідуєтеся до одного з гравців. Наступного дня цей гравець не може бути вигнаний голосуванням.\n:trophy:  Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
 
   "condition_mafiaWin_name": "Умова перемоги мафії",
   "condition_mafiaWin_WinEmbedTitle": "Мафія перемогла!",
-  "condition_mafiaWin_WinEmbedDescription": "Мафія захопила місто — закон повалено.",
+  "condition_mafiaWin_WinEmbedDescription": "%Мафія захопила місто — закон повалено.\nЧлени мафії: {sr:mafia:string}.%",
   "condition_killerWin_name": "Умова перемоги маніяка",
   "condition_killerWin_WinEmbedTitle": "Маніяк переміг!",
-  "condition_killerWin_WinEmbedDescription": "Маніяк переміг — усе місто вирізано.",
+  "condition_killerWin_WinEmbedDescription": "%Маніяк {sr:killer:string} переміг — усе місто вирізано.%",
   "condition_peacefulWin_name": "Умова перемоги мирних",
   "condition_peacefulWin_WinEmbedTitle": "Мирні перемогли!",
-  "condition_peacefulWin_WinEmbedDescription": "Мирні перемогли — злочинців у місті не лишилося.",
+  "condition_peacefulWin_WinEmbedDescription": "%Мирні перемогли — злочинців у місті не лишилося.\nУбивцями були: {sr:killer:string}.%",
 
   "role_embed_action_name": "Дія",
   "role_embed_groupDec_name": "Чи грає в групі?",
@@ -111,20 +114,49 @@
   "profile_button_custom": "Кастомізація",
   "profile_button_news": "Повідомлення про новини",
 
-  "create_condition_error_premium": "Вибачте, у вас немає Premium, щоб створювати власні ролі та умови!",
-  "create_condition_error_number": "Вибачте, ви не можете створити більше, ніж 21 умову!",
-  "create_condition_title1": "Створення умови",
-  "create_condition_conditionName_label": "Назва",
-  "create_condition_conditionName_placeHolder": "Моя умова перемоги мафії",
-  "create_condition_title2": "Створення умови: ",
-  "create_condition_condition_label": "Умова",
-  "create_condition_condition_placeHolder": "ваша умова, додаткова інформація в _/help -> Scripting_",
-  "create_condition_embedTitle_label": "Заголовок",
-  "create_condition_embedTitle_placeHolder": "Перемагає мафія ;)",
-  "create_condition_embedDescription_label": "Опис",
-  "create_condition_embedDescription_placeHolder": "Із загадкових причин мафія перемагає...",
-  "create_condition_embedThumbnail_label": "Мініатюра",
-  "create_condition_embedThumbnail_placeHolder": "посилання на зображення з неймовірним кошеням",
-  "create_condition_winRole_label": "Роль, що перемагає",
-  "create_condition_winRole_placeHolder": "просто назва ролі, що перемагає"
+  "condition_create_error_number": "Вибачте, ви не можете створити більше, ніж 21 умову!",
+  "condition_create_title1": "Створення умови",
+  "condition_create_conditionName_label": "Назва",
+  "condition_create_conditionName_placeHolder": "Моя умова перемоги мафії",
+  "condition_create_goNext_button": "Перейти далі",
+  "condition_create_goNext_message": "Натисніть кнопку, щоби продовжити:",
+  "condition_create_title2": "Створення умови: ",
+  "condition_create_condition_label": "Умова",
+  "condition_create_condition_placeHolder": "ваша умова, додаткова інформація в _/help -> Scripting_",
+  "condition_create_embedTitle_label": "Заголовок",
+  "condition_create_embedTitle_placeHolder": "Перемагає мафія ;)",
+  "condition_create_embedDescription_label": "Опис",
+  "condition_create_embedDescription_placeHolder": "%Із загадкових причин мафія перемагає...%",
+  "condition_create_embedThumbnail_label": "Мініатюра",
+  "condition_create_embedThumbnail_placeHolder": "посилання на зображення з неймовірним кошеням",
+  "condition_create_winRole_label": "Роль, що перемагає",
+  "condition_create_winRole_placeHolder": "просто назва ролі, що перемагає",
+  "condition_create_success_message": "Умову успішно створено:",
+
+  "condition_view_error_notFound": "Умову не знайдено!",
+  "condition_view_error_noAccess": "Вибачте, ви не можете переглядати цю умову!",
+
+  "condition_edit_choose_placeHolder": "Оберіть умову для змінення...",
+  "condition_edit_error_notFound": "Умову не знайдено!",
+  "condition_edit_error_noAccess": "Вибачте, ви не можете змінювати цю умову!",
+  "condition_edit_title": "Змінення умови: ",
+  "condition_edit_condition_label": "Умова",
+  "condition_edit_condition_placeHolder": "ваша нова умова, додаткова інформація в _/help -> Scripting_",
+  "condition_edit_embedTitle_label": "Заголовок",
+  "condition_edit_embedTitle_placeHolder": "ваш новий заголовок",
+  "condition_edit_embedDescription_label": "Опис",
+  "condition_edit_embedDescription_placeHolder": "ваш новий опис, не забудьте про %",
+  "condition_edit_embedThumbnail_label": "Мініатюра",
+  "condition_edit_embedThumbnail_placeHolder": "посилання на ваше нове зображення",
+  "condition_edit_winRole_label": "Роль, що перемагає",
+  "condition_edit_winRole_placeHolder": "назва вашої нової ролі, що перемагає",
+  "condition_edit_success_message": "Умову успішно змінено:",
+
+  "condition_delete_choose_placeHolder": "Оберіть умову для видалення...",
+  "condition_delete_error_notFound": "Умову не знайдено!",
+  "condition_delete_error_noAccess": "Вибачте, ви не можете видалити цю умову!",
+  "condition_delete_success_message": "Умову успішно видалено.",
+
+  "error_premium": "Вибачте, у вас немає Premium, щоб створювати власні ролі та умови!",
+  "failure_message": "Сталася помилка, будь ласка, зверніться до служби підтримки!"
 }
