--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,8 +1,9 @@
 {
-  "game_created": "Game Created",
-  "create_error": "You have already created a game, please cancel it or wait for autocancel!",
+  "game_error_incorrectGameID": "Game not found! It may have been cancelled or ended.",
+  "game_create_error": "You have already created a game, please cancel it or wait for autocancel!",
+  "game_created_title": "Game Created",
   "game_created_autocancel": "Autocancel",
-  "game_created_gameOwner": "Game Owner",
+  "game_created_gameHost": "Game Host",
   "game_created_playerList": "Player List",
   "game_created_roles": "Roles:",
   "game_created_gameEndConditions": "Game End Conditions:",
@@ -12,20 +13,22 @@
   "game_created_button_leave": "ㅤㅤLeaveㅤㅤ",
   "game_created_button_edit": "ㅤEditㅤ",
   "game_created_button_new": "ㅤCreate New Gameㅤ",
-  "cancel_content_message": "The game was canceled by its author!",
-  "cancel_confirm_message": "The game was removed!",
-  "auto_cancel_content_message": "The game was automatically canceled!",
-  "error_you_are_not_the_owner": "You aren't an owner of the game!",
-  "error_incorrect_game_id": "Incorrect game id!",
-  "game_was_ended": "The game was stopped by the owner",
-  "game_deleted": "The game was deleted!",
+  "game_cancel_error_noAccess": "Sorry, you can't cancel this game because you aren't its host!",
+  "game_cancel_success_message_aboveEmbed": "The game was cancelled by its host. But you can create another one!",
+  "game_cancel_success_message": "The game was cancelled.",
+  "game_autocancel_message": "The game was automatically cancelled. But you can create another one!",
+  "game_start_error_noAccess": "Sorry, you can't start this game because you aren't its host!",
+  "game_start_error_notEnoughPlayers": "Not enough players to start the game!",
+  "game_start_error_notEnoughRoles": "Not enough roles to start the game!",
+  "game_started_button_endGame": "End Game",
+  "game_started_title": "Game Started",
+  "game_end_error_noAccess": "Sorry, you can't end this game because you aren't its host!",
+  "game_end_success_message": "The game was ended.",
+  "game_end_success_privateMessage": "The game was ended by its host. But you can create another one!",
   "error_you_are_already": "You are already in the game!",
   "join_game": "You have successfully joined!",
   "error_you_are_not_already": "You aren't in the game!",
   "leave_game": "You have left the game!",
-  "error_not_enough_players": "Not enough players to start the game!",
-  "pre_end_game": "End game",
-  "game_started": "The game was started!",
   "innocent": "innocent",
   "mafia": "mafia",
   "doctor": "doctor",
@@ -49,7 +52,7 @@
 
 
   "wake_up_title": "The city wakes up!",
-  "wake_up_description": "Good morning! But is the morning actually good?.. It's time to share your suspicions ⚖",
+  "wake_up_description": "Good morning! But is the morning actually good?.. It's time to share your suspicions :scales:",
   "sleep_time_title": "The city falls asleep...",
   "sleep_time_description": "Hope everyone makes it to the morning!",
   "kills_title": "The rising sun illuminated the traces of horrible atrocities",
@@ -61,31 +64,31 @@
   "vote_select": "Choose who you want to vote against...",
   "role_mafia_name": "Mafia",
   "role_mafia_placeHolder": "Choose your victim...",
-  "role_mafia_description": "%KILL AND SURVIVE!\n:skull_crossbones: Every night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\n:trophy: The mafia wins if it is at least half of all active players.% + ({r:maniac:count} > 0 ? % Exception: if there are two players left — a mafia member and the maniac — the maniac wins.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette: Your teammates: % + %{oPlayersTRole}% : %%)",
+  "role_mafia_description": "%KILL AND SURVIVE!\n:skull_crossbones:  Every night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\n:trophy:  The mafia wins if it is at least half of all active players.% + ({r:maniac:count} > 0 ? % Exception: if there are two players left — a mafia member and the maniac — the maniac wins.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  Your teammates: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Maniac",
   "role_killer_placeHolder": "Choose your victim...",
-  "role_killer_description": "%KILL EVERYONE AND SURVIVE!\n:axe: Once every two nights you kill any player you want. But remember: the victim may be cured by the doctor.\n:trophy: You win if no more than one player besides you remains in the city. Spare nobody!%",
+  "role_killer_description": "%KILL EVERYONE AND SURVIVE!\n:axe:  Once every two nights you kill any player you want. But remember: the victim may be cured by the doctor.\n:trophy:  You win if no more than one player besides you remains in the city. Spare nobody!%",
   "role_peaceful_name": "Innocent",
-  "role_peaceful_description": "%Your goal is to save the city from criminals!\n:scales: Reveal the identities of the villains and achieve their expulsion from the city.\n:trophy: The innocents win if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_peaceful_description": "%Your goal is to save the city from criminals!\n:scales:  Reveal the identities of the villains and achieve their expulsion from the city.\n:trophy:  The innocents win if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_doctor_name": "Doctor",
   "role_doctor_placeHolder": "Choose who you want to heal...",
-  "role_doctor_description": "%You save people's lives! :heart:\n:pill: Every night you heal one player. If this player is chosen by the criminals, he or she will stay alive.\n:trophy: You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_doctor_description": "%You save people's lives! :heart:\n:pill:  Every night you heal one player. If this player is chosen by the criminals, he or she will stay alive.\n:trophy:  You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_police_name": "Detective",
   "role_police_placeHolder": "Choose who you want to check...",
-  "role_police_description": "%You investigate crimes in the city! :oncoming_police_car:\n:mag_right: Every night you check one player and find out if he or she belongs to the mafia.\n:trophy: You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_police_description": "%You investigate crimes in the city! :oncoming_police_car:\n:mag_right:  Every night you check one player and find out if he or she belongs to the mafia.\n:trophy:  You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_mistress_name": "Fancy woman",
   "role_mistress_placeHolder": "Choose who you want to visit...",
-  "role_mistress_description": "%You bring love to this world! And what is love — who knows... :kiss:\n:strawberry: Every night you visit one of the players. The next day, this player can't be voted out.\n:trophy: You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_mistress_description": "%You bring love to this world! And what is love — who knows... :kiss:\n:strawberry:  Every night you visit one of the players. The next day, this player can't be voted out.\n:trophy:  You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
 
   "condition_mafiaWin_name": "Mafia victory condition",
   "condition_mafiaWin_WinEmbedTitle": "The mafia has won!",
-  "condition_mafiaWin_WinEmbedDescription": "The mafia has taken over the city — the law is defeated.",
+  "condition_mafiaWin_WinEmbedDescription": "%The mafia has taken over the city — the law is defeated.\nThe mafia members: {sr:mafia:string}.%",
   "condition_killerWin_name": "Maniac victory condition",
   "condition_killerWin_WinEmbedTitle": "The maniac has won!",
-  "condition_killerWin_WinEmbedDescription": "The maniac has won — the whole city is cut out.",
+  "condition_killerWin_WinEmbedDescription": "%The maniac {sr:killer:string} has won — the whole city is cut out.%",
   "condition_peacefulWin_name": "Innocent victory condition",
   "condition_peacefulWin_WinEmbedTitle": "The innocents have won!",
-  "condition_peacefulWin_WinEmbedDescription": "The innocents have won — there are no criminals left in the city.",
+  "condition_peacefulWin_WinEmbedDescription": "%The innocents have won — there are no criminals left in the city.\nThe murderers were: {sr:killer:string}.%",
 
   "role_embed_action_name": "Action",
   "role_embed_groupDec_name": "Does play in a group?",
@@ -111,20 +114,49 @@
   "profile_button_custom": "Custom",
   "profile_button_news": "News Notifications",
 
-  "create_condition_error_premium": "Sorry, you don't have Premium to create custom roles and conditions!",
-  "create_condition_error_number": "Sorry, you can't create more than 21 conditions!",
-  "create_condition_title1": "Condition Creation",
-  "create_condition_conditionName_label": "Name",
-  "create_condition_conditionName_placeHolder": "My mafia victory condition",
-  "create_condition_title2": "Condition Creation: ",
-  "create_condition_condition_label": "Condition",
-  "create_condition_condition_placeHolder": "your condition; for more information see _/help -> Scripting_",
-  "create_condition_embedTitle_label": "Title",
-  "create_condition_embedTitle_placeHolder": "Mafia wins ;)",
-  "create_condition_embedDescription_label": "Description",
-  "create_condition_embedDescription_placeHolder": "Mysteriously the mafia has won...",
-  "create_condition_embedThumbnail_label": "Thumbnail",
-  "create_condition_embedThumbnail_placeHolder": "crazy kitty image link",
-  "create_condition_winRole_label": "Winning Role",
-  "create_condition_winRole_placeHolder": "just a winning role name"
+  "condition_create_error_number": "Sorry, you can't create more than 21 conditions!",
+  "condition_create_title1": "Condition Creation",
+  "condition_create_conditionName_label": "Name",
+  "condition_create_conditionName_placeHolder": "My mafia victory condition",
+  "condition_create_goNext_button": "Go Next",
+  "condition_create_goNext_message": "Click the button to continue:",
+  "condition_create_title2": "Condition Creation: ",
+  "condition_create_condition_label": "Condition",
+  "condition_create_condition_placeHolder": "your condition; for more information see _/help -> Scripting_",
+  "condition_create_embedTitle_label": "Title",
+  "condition_create_embedTitle_placeHolder": "Mafia wins ;)",
+  "condition_create_embedDescription_label": "Description",
+  "condition_create_embedDescription_placeHolder": "%Mysteriously the mafia has won...%",
+  "condition_create_embedThumbnail_label": "Thumbnail",
+  "condition_create_embedThumbnail_placeHolder": "a crazy kitty image link",
+  "condition_create_winRole_label": "Winning Role",
+  "condition_create_winRole_placeHolder": "just a winning role name",
+  "condition_create_success_message": "The condition was successfully created:",
+
+  "condition_view_error_notFound": "Condition not found!",
+  "condition_view_error_noAccess": "Sorry, you can't view this condition!",
+
+  "condition_edit_choose_placeHolder": "Choose a condition to edit...",
+  "condition_edit_error_notFound": "Condition not found!",
+  "condition_edit_error_noAccess": "Sorry, you can't edit this condition!",
+  "condition_edit_title": "Condition Editing: ",
+  "condition_edit_condition_label": "Condition",
+  "condition_edit_condition_placeHolder": "your new condition; for more information see _/help -> Scripting_",
+  "condition_edit_embedTitle_label": "Title",
+  "condition_edit_embedTitle_placeHolder": "your new title",
+  "condition_edit_embedDescription_label": "Description",
+  "condition_edit_embedDescription_placeHolder": "your new description, don't forget about %",
+  "condition_edit_embedThumbnail_label": "Thumbnail",
+  "condition_edit_embedThumbnail_placeHolder": "your new image link",
+  "condition_edit_winRole_label": "Winning Role",
+  "condition_edit_winRole_placeHolder": "your new winning role name",
+  "condition_edit_success_message": "The condition was successfully changed:",
+
+  "condition_delete_choose_placeHolder": "Choose a condition to delete...",
+  "condition_delete_error_notFound": "Condition not found!",
+  "condition_delete_error_noAccess": "Sorry, you can't delete this condition!",
+  "condition_delete_success_message": "The condition was successfully deleted.",
+
+  "error_premium": "Sorry, you don't have Premium to create custom roles and conditions!",
+  "failure_message": "An error has occurred, please contact the support!"
 }
